2010-04-27 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code of
	"render_report_html_item" function for new types of report items.

	* include/functions.php: cleaned source code of "get_report_types" function
	and added new types of report items.

2010-04-27  Sergio Martin  <sergio.martin@artica.es>

	* pandoradb_data.sql: Changed the group All values
	on tables with default group form 1 to 0

2010-04-27 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/ver_agente.php: removed hack for translate "any" text.
	
	* godmode/reporting/graph_builder.php: removed unused javascript function
	"agent_changed"
	
	* godmode/reporting/reporting_builder.php: re-added parameter
	$values['id_agent_module'].

2010-04-26  Sancho Lerena <slerena@ærtica.es>

	* operation/agentes/datos_agente.php: Fixed the data table render
	for log4x data.

	* operation/agentes/estado_monitores.php: Graph icon should be shown
	when using  Log4x data, it has graphics (need to implement in Flash in
	the future).

2010-04-26  Ramon Novoa  <rnovoa@artica.es>

	* include/javascript/pandora.js: The id_group filter in
	  agent_module_autocomplete is no longer needed.

2010-04-26 Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: in the function
	"agent_changed_by_multiple_agents"fixed the id of "All" group, now it's the
	0.

2010-04-26  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/module_manager_editor_network.php: Added missing '_'.

2010-04-23  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Fixed a doble include in the
	functions_enterprise.php file (breaks the tab "inventory" in the
	agent view).

2010-04-23  Sergio Martin  <sergio.martin@artica.es>

	* general/ui/agents_list.php: Changed the all group
	condition from 1 to 0

2010-04-23  Sergio Martin <sergio.martin@artica.es>
